# PowerTools

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  build.sh  compile_commands.json  gtk_main  gtk_main.cpp  innosetup.iss
header/: core.h
home/: main.cpp
include/: config.conf  config.config  config.h  config.txt  core.h  dirMonitor.h  global.h  systray_win.h
logger/: log.txt  methord.txt
src/: config.cpp  core.cpp  dirMonitor_win.cpp  dirMonitor_windows.cpp  gtk_app.cpp  main.cpp  systray_win.cpp
src/gui/: gtkmmApp.cpp  gtkmmApp.h
test-TCP/: client.cpp  file.txt  logger.txt  server.cpp
